create header and add text and image

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,5 +9,5 @@
   }
 
 .menu-item {
-  @apply font-medium text-2xl mix-blend-multiply capitalize
+  @apply font-semibold text-2xl mix-blend-multiply capitalize
 }
