complete serv component and responsive menu

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,5 +9,5 @@
   }
 
 .menu-item {
-  @apply font-semibold text-2xl mix-blend-multiply capitalize
+  @apply font-semibold lg:text-2xl text-base  capitalize
 }
